# TelegramBotPlanner

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Telebot.py  docker-compose.yml  pyproject.toml  sql_app.db
.github/workflow/: python-app.yml
.github/workflows/: tests.yml
src/: sql_app.db
src/my_bot/: Telebot.py  ai_logic.py  models.py  run.py
tests/: conftest.py  test_ai.py  test_bot_logic.py  test_config.py  test_handlers.py  test_models.py
