[tool.poetry]
name = "telegrambotplanner"
version = "0.1.0"
description = "Telegram tasks planner with integrated AI responses"
authors = ["Alena Nakidkina <alena.nakidkina@gmail.com>"]
readme = "README.md"
packages = [] # Это явно говорит: "Не ищи папки с кодом для установки"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.31.0"
python-dotenv = "^1.2.2"
google-generativeai = "^0.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",

]
