[tool.poetry]
name = "telegrambotplanner"
version = "0.1.0"
description = "Telegram tasks planner with integrated AI responses"
authors = ["Alena Nakidkina <alena.nakidkina@gmail.com>"]
readme = "README.md"
packages = [{include = "my_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.31.0"
python-dotenv = "^1.2.2"
google-generativeai = "^0.8.6"
sqlalchemy = "^2.0.49"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "pytest-env (>=1.6.0,<2.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.pytest_env]
TELEGRAM_TOKEN = "12345:fake_token_for_tests"
GEMINI_API_KEY = "fake_key_for_testing"
DATABASE_URL = "sqlite:///:memory:"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["venv", ".venv"]

[tool.coverage.run]
omit = ["src/my_bot/run.py"]

[tool.coverage.report]
show_missing = true
